# geomProj

./: CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
report/: 2024_1_Сырцов_Степан.docx
src/: CMakeLists.txt  main.cpp
